# maubot-fedora-contrib

./: .gitignore  README.md  base-config.yaml  fedora_contrib.py  maubot.yaml  pyproject.toml  test_search.py
