[project]
name = "maubot-fedora-contrib"
version = "0.1.0"
description = "Maubot plugin that searches Fedora contributor documentation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "maubot>=0.5.0",
    "docs2db-api>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
